--- a/.github/workflows/gradle_build.yml
+++ b/.github/workflows/gradle_build.yml
@@ -10,15 +10,18 @@ on:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        java: [ 19 ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Set up JDK 19
+      - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v3
         with:
-          java-version: 19
+          java-version: ${{ matrix.java }}
           distribution: 'temurin'
           cache: 'gradle'
 
